--- a/html5_Code/Starting a page.html
+++ b/html5_Code/Starting a page.html
@@ -7,6 +7,7 @@
 		<h1><i class="fas fa-paw fa-x"></i>PAW</h1>
 		<nav>Menu</nav>
 	</header><hr></hr>
+<link rel=""stylesheet" href="style.css">
 </head>
 <body>
 	<main><p>My main text is here <i class="fas fa-horse-head fa-2x-"></i></p><main>
