--- a/html5_code/starting.html
+++ b/html5_code/starting.html
@@ -8,7 +8,7 @@
 		<nav><ul><li>Menu</li></ul></nav>
 	</header><hr></hr>
 
-	<link rel=""stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css">
 
 </head>
 <body>
